# MAPF-Robots-Thesis

./: .gitignore  README.md  Setup.sh
ros2_ws/: .gitignore
ros2_ws/src/hardware/car_simul/: setup.py
ros2_ws/src/hardware/car_simul/launch/: citty_traffic.launch.py
ros2_ws/src/hardware/humanoid_simul/: CMakeLists.txt
ros2_ws/src/hardware/humanoid_simul/launch/: booster_t1.launch.py
ros2_ws/src/hardware/justina_description/urdf/: justina_base.xacro
ros2_ws/src/hri/lira_gui/src/: rclcomm.cpp
ros2_ws/src/navigation/mapf_coordinator/: package.xml  setup.cfg  setup.py
ros2_ws/src/navigation/mapf_coordinator/launch/: gnfc_allocator.launch.py  goal_zone.launch.py  goal_zone_visualizer.launch.py  visualizer_only.launch.py
ros2_ws/src/navigation/mapf_coordinator/mapf_coordinator/: cbs_coordinator.py  d_star_executor.py  gnfc_goal_allocator.py  goal_zone_visualizer.py  priority_manager.py  whca_coordinator.py  whca_star.py
ros2_ws/src/navigation/motion_planning/: setup.py
ros2_ws/src/navigation/motion_planning/launch/: mapping.launch.py  motion_planning.launch.py  motion_planning_utils.launch.py  robot_nav.launch.py
ros2_ws/src/navigation/motion_planning/rviz/: motion_planning.rviz
ros2_ws/src/navigation/navig_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/navigation/navig_msgs/msg/: RobotHealth.msg  SpaceTimeReservation.msg
ros2_ws/src/navigation/path_follower/: package.xml  setup.py
ros2_ws/src/navigation/path_follower/path_follower/: pure_pursuit.py
ros2_ws/src/navigation/path_planner/: package.xml  setup.py
ros2_ws/src/navigation/path_planner/path_planner/: a_star.py  cost_map.py  path_smoothing.py  pot_fields.py  rrt.py
ros2_ws/src/swarm_bringup/: CMakeLists.txt  GUIDE.md  package.xml
ros2_ws/src/swarm_bringup/config/: gz_bridge_alvin.yaml  gz_bridge_simon.yaml  gz_bridge_teodoro.yaml
ros2_ws/src/swarm_bringup/launch/: scenario.launch.py  swarm.launch.py  test_one_robot.launch.py
ros2_ws/src/swarm_bringup/scripts/: swarm_health_monitor.py  swarm_monitor.py  swarm_teleop_gui.py  swarm_viz_bridge.py
