<?xml version="1.0"?>
<package format="3">
  <name>mapf_coordinator</name>
  <version>0.0.0</version>
  <description>MAPF coordinator nodes: WHCA* and CBS modes</description>
  <maintainer email="eithantrevino@gmail.com">Eithan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>navig_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
